--- a/base/dockerfile
+++ b/base/dockerfile
@@ -34,3 +34,7 @@ ENV GDAL_DATA /opt/conda/share/gdal
 
 # Create processing paths
 RUN mkdir -p /data
+
+# copy test for docker build
+COPY /config/test.txt .
+
