Changing directories, separating tasks, adding command for buildfilelist

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -1,18 +1,12 @@
-# Incoming
-# --------
-# /raw
+# Input - incoming product for processing
+# State - Workflow state
+# Working/extracted - Extracted product
+# working/temp - Temporary files created during processing
+# ouput - Generated product
 
-# Internal
-# --------
-# /tmp
-# /state
-
-# Output
-# ------
-# /ard
-
-[UnzipRaw]
-pathRoots = {"raw":"/incoming/raw",
-            "state":"/internal/state",
-            "output":"/output/ard", 
-            "temp":"/internal/tmp"}
+[BuildFileList]
+pathRoots = {"input":"/input",
+            "state":"/state",
+            "extracted":"/working/extracted",
+            "temp":"/working/temp",
+            "output":"/output"}
