arcsi command running

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -4,8 +4,9 @@
 # working/temp - Temporary files created during processing
 # ouput - Generated product
 
-[BuildFileList]
+[RunArcsi]
 pathRoots = {"input":"/input",
+            "static":"/static",
             "state":"/state",
             "extracted":"/working/extracted",
             "temp":"/working/temp",
