--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -18,8 +18,9 @@
 #             "output":"/output/ard", 
 #             "temp":"/internal/tmp"}
 
-[GenerateMetadata]
-pathRoots = {"raw":"/home/vagrant/workspace/temp/eo-s2-workflow/incoming/raw",
+[RunArcsi]
+pathRoots = {"input":"/home/vagrant/workspace/temp/eo-s2-workflow/incoming/raw",
+            "static":"/home/vagrant/workspace/temp/eo-s2-workflow/incoming/static",
             "state":"/home/vagrant/workspace/temp/eo-s2-workflow/internal/state",
             "output":"/home/vagrant/workspace/temp/eo-s2-workflow/output/ard", 
             "temp":"/home/vagrant/workspace/temp/eo-s2-workflow/internal/tmp"}
