Skeleton changes, renaming, ProcessRawToArd more or less done

--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -18,9 +18,9 @@
 #             "output":"/output/ard", 
 #             "temp":"/internal/tmp"}
 
-[RunArcsi]
+[ProcessRawToArd]
 pathRoots = {"input":"/home/vagrant/workspace/temp/eo-s2-workflow/incoming/raw",
             "static":"/home/vagrant/workspace/temp/eo-s2-workflow/incoming/static",
             "state":"/home/vagrant/workspace/temp/eo-s2-workflow/internal/state",
             "output":"/home/vagrant/workspace/temp/eo-s2-workflow/output/ard", 
-            "temp":"/home/vagrant/workspace/temp/eo-s2-workflow/internal/tmp"}
+            "temp":"/home/vagrant/workspace/temp/eo-s2-workflow/internal/temp"}
