--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -4,7 +4,15 @@
 # working/temp - Temporary files created during processing
 # ouput - Generated product
 
-[RunArcsi]
+[ProcessRawToArd]
+pathRoots = {"input":"/input",
+            "static":"/static",
+            "state":"/state",
+            "extracted":"/working/extracted",
+            "temp":"/working/temp",
+            "output":"/output"}
+
+[TransferArdToOutput]
 pathRoots = {"input":"/input",
             "static":"/static",
             "state":"/state",
