--- a/base/dockerfile
+++ b/base/dockerfile
@@ -13,20 +13,20 @@ RUN apt-get update && apt-get install apt-utils -y
 RUN apt-get update && \
     apt-get install -y \
         libmpfr4 \
-        libgl1-mesa-glx && \
+        libgl1-mesa-glx \
+        unzip && \
     apt-get clean
 
 # update conda and install arcsi using conda package manager and clean up (rm tar packages to save space)
 RUN conda update -n base conda
-RUN conda update --yes -c conda-forge conda && \
-    conda install --yes -c conda-forge python=3.5 arcsi && \
-    conda update -c conda-forge --all && \
-    conda clean --yes -t
 
-# Ugly fixes for dependency versions
-#RUN cd /opt/conda/lib && \
-#ln -s libgeos-3.5.1.so libgeos-3.5.0.so && \
-#ln -s libjpeg.so.9 libjpeg.so.8
+RUN conda update --yes -c conda-forge conda && \
+    conda create --yes -n arcsienv python=3.5
+
+RUN /bin/bash -c ". activate arcsienv && \
+    conda install --yes -c conda-forge arcsi && \
+    conda update -c conda-forge --all && \
+    conda clean --yes -t"
 
 # set gdal paths
 ENV GDAL_DRIVER_PATH /opt/conda/lib/gdalplugins:$GDAL_DRIVER_PATH
@@ -35,4 +35,7 @@ ENV GDAL_DATA /opt/conda/share/gdal
 # Create processing paths
 RUN mkdir -p /data
 
+COPY app/exec.sh ./
+RUN chmod +rx /app/exec.sh
 
+ENTRYPOINT ["/app/exec.sh"]
