Started work to try and make reprojection possible, also started documenting the interior structure of the workflow

--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -19,8 +19,10 @@
 #             "temp":"/internal/tmp"}
 
 [ProcessRawToArd]
-pathRoots = {"input":"/home/vagrant/workspace/temp/eo-s2-workflow/incoming/raw",
-            "static":"/home/vagrant/workspace/temp/eo-s2-workflow/incoming/static",
-            "state":"/home/vagrant/workspace/temp/eo-s2-workflow/internal/state",
-            "output":"/home/vagrant/workspace/temp/eo-s2-workflow/output/ard", 
-            "temp":"/home/vagrant/workspace/temp/eo-s2-workflow/internal/temp"}
+processes = "RAD SHARP SATURATE CLOUDS TOPOSHADOW STDSREF DOSAOTSGL METADATA"
+keepFiles = "clouds.kea meta.json sat.kea toposhad.kea valid.kea stdsref.kea"
+pathRoots = {"input":"/workflow/input",
+            "static":"/workflow/static",
+            "state":"/workflow/state",
+            "output":"/workflow/output", 
+            "temp":"/workflow/temp"}
