Started sketching out the expected outputs from each step, need to do some more run throughs to make sure it makes sense, also added some comment on the basics of what are going on in each step

--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -21,8 +21,8 @@
 [ProcessRawToArd]
 processes = "RAD SHARP SATURATE CLOUDS TOPOSHADOW STDSREF DOSAOTSGL METADATA"
 keepFiles = "clouds.kea meta.json sat.kea toposhad.kea valid.kea stdsref.kea"
-pyramidLevels = "2 4 8 16 32 64 128"
 pathRoots = {"input":"/workflow/input",
+            "extracted":"/workflow/extracted",
             "static":"/workflow/static",
             "state":"/workflow/state",
             "output":"/workflow/output", 
