Couple minor updates from discussions earlier

--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -22,8 +22,8 @@
 processes = "RAD SHARP SATURATE CLOUDS TOPOSHADOW STDSREF DOSAOTSGL METADATA"
 keepFiles = "clouds.kea meta.json sat.kea toposhad.kea valid.kea stdsref.kea"
 pathRoots = {"input":"/workflow/input",
-            "extracted":"/workflow/extracted",
+            "extracted":"/workflow/temp/extracted",
             "static":"/workflow/static",
-            "state":"/workflow/state",
+            "state":"/workflow/temp/state",
             "output":"/workflow/output", 
             "temp":"/workflow/temp"}
