workflow chainges form other repo

--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -18,12 +18,13 @@
 #             "output":"/output/ard", 
 #             "temp":"/internal/tmp"}
 
-[ProcessRawToArd]
-processes = "RAD SHARP SATURATE CLOUDS TOPOSHADOW STDSREF DOSAOTSGL METADATA"
-keepFiles = "clouds.kea meta.json sat.kea toposhad.kea valid.kea stdsref.kea"
+[FinaliseOutputs]
 pathRoots = {"input":"/workflow/input",
             "extracted":"/workflow/temp/extracted",
             "static":"/workflow/static",
             "state":"/workflow/temp/state",
             "output":"/workflow/output", 
             "temp":"/workflow/temp"}
+metadataConfigPath = /state/metadata-config.json
+metadataTemplatePath = template/s2_metadata_template.xml
+maxCogProcesses = 4
