--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -4,18 +4,19 @@
 # working/temp - Temporary files created during processing
 # ouput - Generated product
 
-[ProcessRawToArd]
-pathRoots = {"input":"/input",
-            "static":"/static",
-            "state":"/state",
-            "extracted":"/working/extracted",
-            "temp":"/working/temp",
-            "output":"/output"}
+[FinaliseOutputs]
+pathRoots = {"input":"/workflow/input",
+            "extracted":"/workflow/temp/extracted",
+            "static":"/workflow/static",
+            "state":"/workflow/temp/state",
+            "output":"/workflow/output", 
+            "temp":"/workflow/temp"}
+metadata = {"metadataTemplate" : "templates/s2_metadata_template.xml",
+            "arcsiVersion": "v3.1.6",
+            "projection" : "OSGB",
+            "targetSrs" : "EPSG:27700",
+            "demTitle" : "dem title"
+            "placeName" : "United Kingdom",
+            "parentPlaceName" : "Europe"}
 
-[TransferArdToOutput]
-pathRoots = {"input":"/input",
-            "static":"/static",
-            "state":"/state",
-            "extracted":"/working/extracted",
-            "temp":"/working/temp",
-            "output":"/output"}
+maxCogProcesses = 4
