--- a/workflow/app/workflows/requirements.txt
+++ b/workflow/app/workflows/requirements.txt
@@ -1,10 +1,3 @@
-dill==0.2.5
-docutils==0.14
-future==0.16.0
-lockfile==0.12.2
-luigi==2.7.7
-PyFunctional==1.1.3
-python-daemon==2.2.3
-six==1.10.0
-tabulate==0.7.7
-tornado==5.1
+luigi==2.8.9
+PyFunctional==1.3.0
+Pebble==4.4.0
