metadata config changes

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -5,18 +5,13 @@
 # ouput - Generated product
 
 [FinaliseOutputs]
-pathRoots = {"input":"/workflow/input",
+paths = {"input":"/workflow/input",
             "extracted":"/workflow/temp/extracted",
             "static":"/workflow/static",
             "state":"/workflow/temp/state",
             "output":"/workflow/output", 
             "temp":"/workflow/temp"}
-metadata = {"metadataTemplate" : "templates/s2_metadata_template.xml",
-            "arcsiVersion": "v3.1.6",
-            "projection" : "OSGB",
-            "targetSrs" : "EPSG:27700",
-            "demTitle" : "dem title"
-            "placeName" : "United Kingdom",
-            "parentPlaceName" : "Europe"}
-
+metadataConfigFile = metadata-config.json
+metadataTemplate = templates/s2_metadata_template.xml
+maxCogProcesses = 4
 maxCogProcesses = 4
