--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -22,9 +22,9 @@
 pathRoots = {"input":"/workflow/input",
             "extracted":"/workflow/temp/extracted",
             "static":"/workflow/static",
-            "state":"/workflow/temp/state",
+            "state":"/workflow/state",
             "output":"/workflow/output", 
-            "temp":"/workflow/temp"}
-metadataConfigPath = /state/metadata-config.json
-metadataTemplatePath = template/s2_metadata_template.xml
+            "working":"/workflow/working"}
+metadataConfigFile = metadata-config.json
+metadataTemplate = templates/s2_metadata_template.xml
 maxCogProcesses = 4
