fixed borked refactor

--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -19,7 +19,7 @@
 #             "temp":"/internal/tmp"}
 
 [FinaliseOutputs]
-pathRoots = {"input":"/workflow/input",
+paths = {"input":"/workflow/input",
             "extracted":"/workflow/temp/extracted",
             "static":"/workflow/static",
             "state":"/workflow/state",
