get paths correct and in sync with s1

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -6,11 +6,10 @@
 
 [FinaliseOutputs]
 paths = {"input":"/workflow/input",
-            "extracted":"/workflow/temp/extracted",
             "static":"/workflow/static",
-            "state":"/workflow/temp/state",
+            "state":"/workflow/state",
             "output":"/workflow/output", 
-            "temp":"/workflow/temp"}
+            "working":"/workflow/working"}
 metadataConfigFile = metadata-config.json
 metadataTemplate = templates/s2_metadata_template.xml
 maxCogProcesses = 4
