--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -5,11 +5,11 @@
 # ouput - Generated product
 
 [FinaliseOutputs]
-paths = {"input":"/workflow/input",
-            "static":"/workflow/static",
-            "state":"/workflow/state",
-            "output":"/workflow/output", 
-            "working":"/workflow/working"}
+paths = {"input":"/input",
+            "static":"/static",
+            "state":"/state",
+            "output":"/output", 
+            "working":"/working"}
 metadataConfigFile = metadata-config.json
 metadataTemplate = templates/s2_metadata_template.xml
 maxCogProcesses = 4
