added singularity testing script

--- a/workflow/dockerfile
+++ b/workflow/dockerfile
@@ -34,6 +34,10 @@ RUN chmod +r ./workflows/luigi.cfg
 # Copy wkt file
 COPY /app/BritishNationalGrid.wkt ./
 
+# Copy the singularity test script
+COPY app/test-luigi.sh ./
+RUN chmod +rx /app/test-luigi.sh
+
 #Initialise startup script
 COPY app/exec.sh ./
 RUN chmod +rx /app/exec.sh
