--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -4,6 +4,17 @@
 # working/temp - Temporary files created during processing
 # ouput - Generated product
 
+
+[ProduceRawToArd]
+paths = {"input":"/input",
+            "static":"/static",
+            "state":"/state",
+            "output":"/output", 
+            "working":"/working"}
+metadataConfigFile = metadata-config.json
+metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
+maxCogProcesses = 4
+
 [FinaliseOutputs]
 paths = {"input":"/input",
             "static":"/static",
