added default mpi config

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -14,6 +14,7 @@ paths = {"input":"/input",
 metadataConfigFile = metadata-config.json
 metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
 maxCogProcesses = 4
+jasminMpiConfig = /static/jasmin-mpi-config.json
 
 [FinaliseOutputs]
 paths = {"input":"/input",
