--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -5,7 +5,7 @@
 # ouput - Generated product
 
 
-[ProduceRawToArd]
+[ProcessRawToArd]
 paths = {"input":"/input",
             "static":"/static",
             "state":"/state",
