bsub path is a parameter now

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -11,9 +11,7 @@ paths = {"input":"/input",
             "state":"/state",
             "output":"/output", 
             "working":"/working"}
-metadataConfigFile = metadata-config.json
-metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
-maxCogProcesses = 4
+bsubCmdPath = /apps/lsf/10.1/linux2.6-glibc2.3-x86_64/bin/bsub
 jasminMpiConfig = jasmin-mpi-config.json
 
 [FinaliseOutputs]
@@ -25,3 +23,5 @@ paths = {"input":"/input",
 metadataConfigFile = metadata-config.json
 metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
 maxCogProcesses = 4
+bsubCmdPath = /apps/lsf/10.1/linux2.6-glibc2.3-x86_64/bin/bsub
+jasminMpiConfig = jasmin-mpi-config.json
