Breaking workflow into 3 stages to be instigated separately by orchestrator

--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -27,5 +27,5 @@ paths = {"input":"/workflow/input",
 metadataConfigFile = metadata-config.json
 metadataTemplate = templates/s2_metadata_template.xml
 maxCogProcesses = 4
-jasminMpi = False
-jasminMpiConfig = templates/s2_mpi_job_template.bsub
+mpi = False
+mpirunCmd = mpirun
