--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -4,6 +4,12 @@
 # working/temp - Temporary files created during processing
 # ouput - Generated product
 
+[PrepareArdProcessing]
+paths = {"input":"/input",
+            "static":"/static",
+            "state":"/state",
+            "output":"/output", 
+            "working":"/working"}
 
 [ProcessRawToArd]
 paths = {"input":"/input",
@@ -11,7 +17,8 @@ paths = {"input":"/input",
             "state":"/state",
             "output":"/output", 
             "working":"/working"}
-jasminMpiConfig = jasmin-mpi-config.json
+mpi = False
+mpirunCmd = mpirun.lotus
 
 [FinaliseOutputs]
 paths = {"input":"/input",
@@ -22,4 +29,5 @@ paths = {"input":"/input",
 metadataConfigFile = metadata-config.json
 metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
 maxCogProcesses = 4
-jasminMpiConfig = jasmin-mpi-config.json
+mpi = False
+mpirunCmd = mpirun.lotus
