Added removeInputDir flag

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -31,3 +31,4 @@ metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_templat
 maxCogProcesses = 4
 mpi = False
 mpirunCmd = mpirun.lotus
+removeInputDir = False
