Adding mpi and non-mpi arcsi run templates

--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -26,6 +26,5 @@ paths = {"input":"/workflow/input",
             "working":"/workflow/working"}
 metadataConfigFile = metadata-config.json
 metadataTemplate = templates/s2_metadata_template.xml
+arcsiCmdTemplate = templates/arcsi_cmd_template.txt
 maxCogProcesses = 4
-mpi = False
-mpirunCmd = mpirun
