--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -17,8 +17,7 @@ paths = {"input":"/input",
             "state":"/state",
             "output":"/output", 
             "working":"/working"}
-mpi = False
-mpirunCmd = mpirun.lotus
+arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
 
 [FinaliseOutputs]
 paths = {"input":"/input",
@@ -28,7 +27,6 @@ paths = {"input":"/input",
             "working":"/working"}
 metadataConfigFile = metadata-config.json
 metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
+arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
 maxCogProcesses = 4
-mpi = False
-mpirunCmd = mpirun.lotus
 removeInputFiles = False
