Making cog validation optional

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -30,3 +30,4 @@ metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_templat
 arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
 maxCogProcesses = 4
 removeInputFiles = False
+validateCogs = False
