--- a/workflow/app/workflows/luigi.cfg
+++ b/workflow/app/workflows/luigi.cfg
@@ -28,3 +28,5 @@ metadataConfigFile = metadata-config.json
 metadataTemplate = templates/s2_metadata_template.xml
 arcsiCmdTemplate = templates/arcsi_cmd_template.txt
 maxCogProcesses = 4
+validateCogs = False
+removeInputFiles = False
