Adding build config file

--- a/workflow/dockerfile
+++ b/workflow/dockerfile
@@ -36,6 +36,9 @@ COPY /app/workflows ./workflows
 COPY config/app/workflows/luigi.cfg ./workflows
 RUN chmod +r ./workflows/luigi.cfg
 
+# Copy build config
+COPY config/app/workflows/build-config.json ./
+
 # Copy wkt file
 COPY /app/BritishNationalGrid.wkt ./
 
