--- a/workflow/app/workflows/luigi.cfg.template
+++ b/workflow/app/workflows/luigi.cfg.template
@@ -1,29 +1,10 @@
-# Incoming
-# --------
-# /raw
-
-# Internal
-# --------
-# /tmp
-# /state
-
-# Output
-# ------
-# /ard
-
-
-# [UnzipRaw]
-# pathRoots = {"raw":"/incoming/raw",
-#             "state":"/internal/state",
-#             "output":"/output/ard", 
-#             "temp":"/internal/tmp"}
-
 [FinaliseOutputs]
 paths = {"input":"/workflow/input",
             "static":"/workflow/static",
             "state":"/workflow/state",
             "output":"/workflow/output", 
             "working":"/workflow/working"}
+buildConfigFile = build-config.json
 metadataConfigFile = metadata-config.json
 metadataTemplate = templates/s2_metadata_template.xml
 arcsiCmdTemplate = templates/arcsi_cmd_template.txt
