Adding path to build config file

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -25,7 +25,7 @@ paths = {"input":"/input",
             "state":"/state",
             "output":"/output", 
             "working":"/working"}
-buildConfigFile = build-config.json
+buildConfigFile = /app/build-config.json
 metadataConfigFile = metadata-config.json
 metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
 arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
