--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -10,6 +10,8 @@ paths = {"input":"/input",
             "state":"/state",
             "output":"/output", 
             "working":"/working"}
+            
+arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
 
 [ProcessRawToArd]
 paths = {"input":"/input",
