--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -21,12 +21,27 @@ paths = {"input":"/input",
             "working":"/working"}
 arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
 
-[FinaliseOutputs]
+# [FinaliseOutputs]
+# paths = {"input":"/input",
+#             "static":"/static",
+#             "state":"/state",
+#             "output":"/output", 
+#             "working":"/working"}
+# buildConfigFile = /app/build-config.json
+# metadataConfigFile = metadata-config.json
+# metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
+# arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
+# maxCogProcesses = 4
+# removeInputFiles = False
+# validateCogs = False
+
+[GenerateReport]
 paths = {"input":"/input",
             "static":"/static",
             "state":"/state",
             "output":"/output", 
-            "working":"/working"}
+            "working":"/working",
+            "report":"/report"}
 buildConfigFile = /app/build-config.json
 metadataConfigFile = metadata-config.json
 metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
