--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -41,7 +41,8 @@ paths = {"input":"/input",
             "state":"/state",
             "output":"/output", 
             "working":"/working",
-            "report":"/report"}
+            "report":"/report",
+            "database":"/database"}
 buildConfigFile = /app/build-config.json
 metadataConfigFile = metadata-config.json
 metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
