--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -21,6 +21,24 @@ paths = {"input":"/input",
             "working":"/working"}
 arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
 
+####Testing
+
+[UnzipRaw]
+paths = {"input":"/input",
+            "static":"/static",
+            "state":"/state",
+            "output":"/output", 
+            "working":"/working"}
+arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
+
+[BuildFileList]
+paths = {"input":"/input",
+            "static":"/static",
+            "state":"/state",
+            "output":"/output", 
+            "working":"/working"}
+arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
+
 # [FinaliseOutputs]
 # paths = {"input":"/input",
 #             "static":"/static",
