--- a/workflow/dockerfile
+++ b/workflow/dockerfile
@@ -1,4 +1,4 @@
-FROM jncc/arcsi-mpi-base:latest
+FROM jncc/arcsi-mpi-base-dev:latest
 
 # Setup app folder
 WORKDIR /app
@@ -20,10 +20,6 @@ RUN mkdir -p /input/ \
     && mkdir -p /report/ \
     && mkdir -p /database/
     
-# Create mount point for LOTUS LSF commands
-RUN mkdir -p /apps/lsf/
-
-#todo create mount point for mpirun.lotus script location
 
 # Copy workflow requirements
 COPY /app/workflows/requirements.txt ./workflows/
