use pete buntings base

--- a/mpi-base/dockerfile
+++ b/mpi-base/dockerfile
@@ -1,4 +1,5 @@
-FROM jncc/arcsi-base
+# FROM jncc/arcsi-base
+FROM petebunting/au-eoed
 
 COPY arcsimpi.py /opt/conda/bin/arcsimpi.py
 RUN chmod +rx /opt/conda/bin/arcsimpi.py
@@ -12,8 +13,9 @@ RUN chmod +rx /opt/conda/bin/arcsimpi.py
 # RUN mkdir /opt/platform_mpi
 # ENV LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:/opt/platform_mpi/lib/linux_amd64
 
-RUN conda install --yes -c anaconda mpi4py
+# RUN conda install --yes -c anaconda mpi4py
 # 2 RUN conda install --yes -c anaconda mpi4py
+RUN conda install --yes mpi4py
 
 ENV MPI_WORKDIR /data
 
