config for finalise outputs

--- a/workflow/config/app/workflows/luigi.cfg
+++ b/workflow/config/app/workflows/luigi.cfg
@@ -39,19 +39,21 @@ paths = {"input":"/input",
             "working":"/working"}
 arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
 
-# [FinaliseOutputs]
-# paths = {"input":"/input",
-#             "static":"/static",
-#             "state":"/state",
-#             "output":"/output", 
-#             "working":"/working"}
-# buildConfigFile = /app/build-config.json
-# metadataConfigFile = metadata-config.json
-# metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
-# arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
-# maxCogProcesses = 4
-# removeInputFiles = False
-# validateCogs = False
+[FinaliseOutputs]
+paths = {"input":"/input",
+            "static":"/static",
+            "state":"/state",
+            "output":"/output", 
+            "working":"/working",
+            "report":"/report",
+            "database":"/database"}
+buildConfigFile = /app/build-config.json
+metadataConfigFile = metadata-config.json
+metadataTemplate = /app/workflows/process_s2_swath/templates/s2_metadata_template.xml
+arcsiCmdTemplate = /app/workflows/process_s2_swath/templates/arcsi_cmd_template.txt
+maxCogProcesses = 4
+removeInputFiles = False
+validateCogs = False
 
 [GenerateReport]
 paths = {"input":"/input",
