--- a/mpi-base/dockerfile
+++ b/mpi-base/dockerfile
@@ -15,7 +15,7 @@ ENV PYTHONPATH ${PYTHONPATH}:/app/local/site-packages
 
 # Make dir to bind OpenMPI files on JASMIN
 RUN mkdir -p /apps/eb/software
-ENV LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:/apps/eb/software/OpenMPI/4.0.0-GCC-8.2.0-2.31.1/lib
+ENV LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:/apps/eb/software/OpenMPI/4.1.1-GCC-10.3.0/bin/
 
 # Make mount points
 RUN mkdir /input && \
