--- a/mpi-base/dockerfile
+++ b/mpi-base/dockerfile
@@ -1,12 +1,8 @@
-#FROM petebunting/au-eoed-dev:20191128
-FROM jncc/arcsi-base:latest
+FROM petebunting/au-eoed:latest
 
 # Copy runscript
-COPY local_files/arcsimpi.py /opt/conda/bin/arcsimpi.py
-RUN chmod +rx /opt/conda/bin/arcsimpi.py
-
-COPY local_files/arcsimpi.sh /opt/conda/bin/arcsimpi.sh
-RUN chmod +rx /opt/conda/bin/arcsimpi.sh
+COPY local_files/arcsimpi.sh /opt/miniconda/bin/arcsimpi.sh
+RUN chmod +rx /opt/miniconda/bin/arcsimpi.sh
 
 # Copy in JASMIN-built mpi4py package
 RUN mkdir -p /app/local
@@ -15,8 +11,8 @@ RUN chmod -R +rx /app/local/site-packages
 ENV PYTHONPATH ${PYTHONPATH}:/app/local/site-packages
 
 # Make dir to bind OpenMPI files on JASMIN
-RUN mkdir -p /apps/eb/software
-ENV LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:/apps/eb/software/OpenMPI/4.1.1-GCC-10.3.0/bin/
+RUN mkdir -p /apps/sw/eb/software
+ENV LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:/apps/sw/eb/software/OpenMPI/4.0.0-GCC-8.2.0-2.31.1/bin/
 
 # Make mount points
 RUN mkdir /input && \
