ARCSI file name patch

--- a/mpi-base/dockerfile
+++ b/mpi-base/dockerfile
@@ -1,6 +1,8 @@
 FROM petebunting/au-eoed:latest
 
 # Copy runscript
+COPY local_files/arcsisensorsentinel2.py /opt/miniconda/lib/python3.10/site-packages/arcsilib/arcsisensorsentinel2.py
+
 COPY local_files/arcsimpi.sh /opt/miniconda/bin/arcsimpi.sh
 RUN chmod +rx /opt/miniconda/bin/arcsimpi.sh
 
