--- a/workflow/app/workflows/luigi.cfg.template
+++ b/workflow/app/workflows/luigi.cfg.template
@@ -6,6 +6,8 @@ paths = {"input":"/workflow/input",
             "working":"/workflow/working",
             "report":"/workflow/report",
             "database":"/database/working"}
+dem = dem.kea
+outWkt = BritishNationalGrid.wkt
 buildConfigFile = build-config.json
 metadataConfigFile = metadata-config.json
 metadataTemplate = templates/s2_metadata_template.xml
@@ -13,3 +15,4 @@ arcsiCmdTemplate = templates/arcsi_cmd_template.txt
 maxCogProcesses = 4
 validateCogs = False
 removeInputFiles = False
+oldFilenameDateThreshold = 2023-01-01
