--- a/workflow/dockerfile
+++ b/workflow/dockerfile
@@ -1,5 +1,4 @@
-# FROM jncc/arcsi-mpi-base:latest
-FROM jncc/arcsi-mpi-base-dev:latest
+FROM petebunting/au-eoed:latest
 
 # Setup app folder
 WORKDIR /app
@@ -8,7 +7,6 @@ WORKDIR /app
 RUN apt-get update && apt-get -y install \ 
     apt-utils \
     unzip
-
 
 # --------- Place machine build layers before this line ---------
 
@@ -20,11 +18,6 @@ RUN mkdir -p /input/ \
     && mkdir -p /output/ \
     && mkdir -p /report/ \
     && mkdir -p /database/
-    
-# Create mount point for LOTUS LSF commands
-RUN mkdir -p /apps/lsf/
-
-#todo create mount point for mpirun.lotus script location
 
 # Copy workflow requirements
 COPY /app/workflows/requirements.txt ./workflows/
