--- a/workflow/app/workflows/luigi.cfg.template
+++ b/workflow/app/workflows/luigi.cfg.template
@@ -15,3 +15,24 @@ maxCogProcesses = 4
 validateCogs = False
 removeInputFiles = False
 oldFilenameDateThreshold = 2023-01-01
+
+[GenerateReport]
+paths = {"input":"/workflow/input",
+            "static":"/workflow/static",
+            "state":"/workflow/state",
+            "output":"/workflow/output", 
+            "working":"/workflow/working"}
+dem = dem.kea
+outWkt = BritishNationalGrid.wkt
+projAbbv = osgb
+metadataConfigFile = metadata-config.json
+metadataTemplate = templates/s2_metadata_template.xml
+arcsiCmdTemplate = templates/arcsi_cmd_template.txt
+buildConfigFile = build-config.json
+maxCogProcesses = 4
+validateCogs = False
+removeInputFiles = False
+oldFilenameDateThreshold = 2023-01-01
+reportFileName = report.csv
+dbFileName = s2ardproducts.db
+dbConnectionTimeout = 300
